# subtitle-builder-server-deploy

./: .bashrc  .dockerignore  .env.sample  .gitignore  .tmux.conf  .vimrc  Dockerfile  Dockerfile02  Dockerfile03  compose.sample.yml  compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  supervisord.conf  testFlashAttention.py  transcribeTest.py
.github/workflows/: publish-image.yaml
app/: .env.sample  .gitignore  pyproject.toml
app/src/: mainServer.py  my_exception.py  my_logger.py  testAny.py
bootScript/: 80-my-custom-boot.sh
portal-aio/caddy_manager/: caddy_config_manager.py
src/: Dockerfile  client.py  mainServer.py  my_exception.py  r2_manager.py  testAny.py  testTranscribe.py
supervisor/: app.conf  app.sh
supervisor/script/: instance_portal.sh  jupyter.sh  syncthing.sh  tensorboard.sh  tunnel_manager.sh
